--- a/JsGrid.UI/appsettings.json
+++ b/JsGrid.UI/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DatabaseConnection": "Server=??;Database=??;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=??;Password=??"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=MACBOOKPRO-WIN1\\SQLEXPRESS;Database=GeetSangeet_LocalTest;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=Password@1"
+  }
 }
